<resources>
    <string name="app_name">EZMathMobile</string>
    <string name="app_name_formatted">EZ Math Mobile</string>
    <string name="hyphen">-</string>
    <string name="On">on</string>
    <string name="logoDescription">logo</string>
    <string name="headerDescription">Header</string>
    <string name="reminders">Reminders</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="scheduled_tests">Scheduled Tests</string>
    <string name="schedule_update_test">Schedule/Update Test</string>
    <string name="test_date">Date:</string>
    <string name="exam_id">Exam ID:</string>
    <string name="class_id">Class ID:</string>
    <string name="time">Time:</string>
</resources>