<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TestAddActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/topText"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/schedule_update_test"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/blueSeperator"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/topText"
        android:background="@color/blue_seperator"/>

    <TextView
        android:id="@+id/dateText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/test_date"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/blueSeperator"/>

    <CalendarView
        android:id="@+id/calendarView"
        android:theme="@style/Theme.CalendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dateTextAppearance="@style/Theme.CalendarView"
        android:weekDayTextAppearance="@style/Theme.CalendarView"
        app:layout_constraintTop_toBottomOf="@+id/dateText" />

    <LinearLayout
        android:id="@+id/testTimeInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/calendarView">

        <TextView
            android:id="@+id/testTimeTxt"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/time"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/blueSeperator"/>
        <!-- Selection spinner -->
        <Spinner
            android:id="@+id/inputTestTime"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/round_text_input_list"
            android:spinnerMode="dropdown"
            android:popupBackground="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blueSeperatorTwo"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/testTimeInput"
        android:background="@color/blue_seperator"/>

    <!--Exam ID-->
    <LinearLayout
        android:id="@+id/textExamInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/blueSeperatorTwo">

        <TextView
            android:id="@+id/textExam"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/exam_id"
            android:textSize="30sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/blueSeperator"/>
        <!-- Selection spinner -->
        <Spinner
            android:id="@+id/inputTestExam"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/round_text_input_list"
            android:spinnerMode="dropdown"
            android:popupBackground="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/testClassInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/textExamInput">

        <TextView
            android:id="@+id/testClass"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:gravity="left"
            android:text="@string/class_id"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/inputTestClass"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:background="@drawable/round_text_input"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textAlignment="gravity"
            android:textSize="20sp"
            android:textColor="@color/redText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/submitCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/testClassInput">

        <Button
            android:id="@+id/buttonSubmit"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:backgroundTint="@color/blue_seperator"
            android:text="Submit"
            android:includeFontPadding="false"
            android:textAlignment="center"
            android:textSize="45dp"
            tools:layout_editor_absoluteX="211dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/cancel_background"
            android:includeFontPadding="false"
            android:text="Cancel"
            android:textAlignment="center"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="211dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>